Bug 81645 - [regression] Unidentified warning when updating cursors
Summary: [regression] Unidentified warning when updating cursors
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: highest normal
Assignee: Paulo Zanoni
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 79896
  Show dependency treegraph
 
Reported: 2014-07-22 16:22 UTC by Alexandre Delanoë
Modified: 2016-10-19 13:05 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
All dmesg output (124.36 KB, text/plain)
2014-07-23 05:51 UTC, Alexandre Delanoë
no flags Details
Another dmesg output when system is freezing (or cursor always blocked, screen not refreshed) (124.42 KB, text/plain)
2014-07-23 13:27 UTC, Alexandre Delanoë
no flags Details
Possible fix (2.76 KB, patch)
2014-07-23 21:33 UTC, Paulo Zanoni
no flags Details | Splinter Review

Description Alexandre Delanoë 2014-07-22 16:22:03 UTC
On Debian Jessie,freeze noticed with such logs in dmesg:

[54320.265767] CPU: 0 PID: 829 Comm: Xorg Tainted: P        W  O 3.14-1-amd64 #1 Debian 3.14.12-1
[54320.265768] Hardware name: Apple Inc. MacBookAir6,1/Mac-35C1E88140C3E6CF, BIOS MBA61.88Z.0099.B09.1402071141 02/07/2014
[54320.265769]  0000000000000009 ffffffff814ba733 ffff88026519dc98 ffffffff8105f032
[54320.265770]  ffff880263518028 ffff88026519dce8 0000000000070084 0000000000000292
[54320.265772]  0000000000000000 ffffffff8105f097 ffffffffa0948a74 ffff880200000018
[54320.265773] Call Trace:
[54320.265775]  [<ffffffff814ba733>] ? dump_stack+0x41/0x51
[54320.265777]  [<ffffffff8105f032>] ? warn_slowpath_common+0x72/0x90
[54320.265778]  [<ffffffff8105f097>] ? warn_slowpath_fmt+0x47/0x50
[54320.265784]  [<ffffffffa091b0ab>] ? hsw_write32+0x4b/0x150 [i915]
[54320.265789]  [<ffffffffa091c428>] ? gen6_read32+0x48/0x120 [i915]
[54320.265794]  [<ffffffffa08d8a4d>] ? intel_crtc_update_cursor+0x29d/0x3f0 [i915]
[54320.265799]  [<ffffffffa08dbb10>] ? intel_crtc_cursor_move+0x50/0x60 [i915]
[54320.265804]  [<ffffffffa031605f>] ? drm_mode_cursor_common+0x8f/0x160 [drm]
[54320.265809]  [<ffffffffa0319c9f>] ? drm_mode_cursor_ioctl+0x3f/0x50 [drm]
[54320.265812]  [<ffffffffa030b89d>] ? drm_ioctl+0x42d/0x530 [drm]
[54320.265816]  [<ffffffffa02fec30>] ? evdev_read+0xd0/0x2f0 [evdev]
[54320.265818]  [<ffffffff81197e9f>] ? do_vfs_ioctl+0x2cf/0x4b0
[54320.265820]  [<ffffffff81185e21>] ? vfs_read+0x91/0x160
[54320.265822]  [<ffffffff811980f9>] ? SyS_ioctl+0x79/0x90
[54320.265823]  [<ffffffff814c80b9>] ? system_call_fastpath+0x16/0x1b
[54320.265824] ---[ end trace 77f62fde486db570 ]---
[54320.265827] [drm:hsw_unclaimed_reg_clear] *ERROR* Unknown unclaimed register before writing to 70084
[54320.265828] [drm:hsw_unclaimed_reg_check] *ERROR* Unclaimed write to 70084
Comment 1 Chris Wilson 2014-07-22 17:58:26 UTC
Please either attach the whole dmesg or include the full WARN. Now tell us more about the freeze since that is not directly related to that warning.
Comment 2 Alexandre Delanoë 2014-07-23 05:51:03 UTC
Created attachment 103316 [details]
All dmesg output

More precisions:
the cursor crash appears even more frequently (as you can see in the dmesg) such that the system becomes unusuable and need to be restarted: the bug appears only after a while maybe after wake up from suspend to ram.

I can send you more info if you want to.
Comment 3 Alexandre Delanoë 2014-07-23 13:27:16 UTC
Created attachment 103335 [details]
Another dmesg output when system is freezing (or cursor always blocked, screen not refreshed)
Comment 4 Paulo Zanoni 2014-07-23 14:08:42 UTC
I can reproduce this bug and am working on a test case and a Kernel fix.
Comment 5 Paulo Zanoni 2014-07-23 21:33:01 UTC
Created attachment 103369 [details] [review]
Possible fix

Hi

Can you confirm this patch fixes your bug?

It fixes the bug I can reproduce... I also implemented a test case to reproduce it: http://lists.freedesktop.org/archives/intel-gfx/2014-July/049481.html

Thanks,
Paulo
Comment 6 Alexandre Delanoë 2014-07-24 06:01:51 UTC
Hello all,
Many thanks for your patch. I have to test it now.

Since it is the first time I report a kernel bug, I do not really know the good practices to test the patch you send me.

Which documentation / tutorial / procedure do you advice I follow ?
Many thanks in advance for your comprehension.
Best regards for you and your works.
Alexandre
Comment 7 Jani Nikula 2014-08-26 12:19:48 UTC
commit d6dd6843ff4a57c662dbc378b9f99a9c034b0956
Author: Paulo Zanoni <paulo.r.zanoni@intel.com>
Date:   Fri Aug 15 15:59:32 2014 -0300

    drm/i915: fix plane/cursor handling when runtime suspended

pushed to drm-intel-fixes branch of http://cgit.freedesktop.org/drm-intel
Comment 8 Jari Tahvanainen 2016-10-19 13:05:29 UTC
Closing resolved+fixed after two years.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.